tests/asm-link/endsection-outside-section/rgbasm.err
error: cannot end a lack of section
   ╭─[ test.asm:1:1 ]
   │
 1 │ ENDSECTION
   │ ─────┬────  
   │      ╰────── no section is active at this point
───╯
1 error generated.
